# Ty_Delargy-SDK

./: .gitignore  LICENSE  README.md  design.md  pyproject.toml  setup.cfg  setup.py
SDK/: LOTR_SDK.py  test_all.py
Ty_Delargy-SDK/: __init__.py
Ty_Delargy_SDK.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_all.py
