[metadata]
name = Ty_Delargy-SDK
version = 0.0.5
author = Ty Delargy
author_email = tjdelargy@gmail.com
description-file = README.rst
url = https://github.com/tydelargy/Ty_Delargy-SDK
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11.0
install_requires = 
    pytest >= 7.2.2
    requests >= 2.28.2
include_package_data = True

